# sds-dbt

./: .env  .gitignore  .pre-commit-config.yaml  .python-version  .sqlfluff  Dockerfile  README.md  cloudbuild.yaml  docker_install_dbt_package.sh  profiles.yml  pyproject.toml
.github/: ci-dev.yml  pre-commit.yml
.github/workflows/: ci-dev.yml  ci-prod.yml
airflow-dags/: README.md  dbt-training-fulll-customer-dev-dag.py  dbt-training-fulll-product-dev-dag.py  pull-fulll-dev-dag.py
dbt/: exercise.md
dbt/all/: README.md  dbt_project.yml  packages.yml
dbt/all/docs/: overview.md
dbt/common/: dbt_project.yml
dbt/common/macros/db_ds_tbl_id_generator/: generate_database_name.sql  generate_schema_name.sql  get_custom_alias.sql
dbt/common/macros/metadata/: query_comment.sql
dbt/customer/: dbt_project.yml  packages.yml
dbt/customer/exercises/: exercise_1.md  exercise_2.md  exercise_3.md
dbt/customer/models/sources/: source_customer.yml
dbt/customer/snapshots/: snapshot_customer.sql
dbt/jaffle_shop/: README.md  dbt_project.yml  packages.yml
dbt/jaffle_shop/macros/: db_ds_tbl_id_generator.sql
dbt/jaffle_shop/models/datamart/: customers.sql  customers.yml  locations.sql  metricflow_time_spine.sql  order_items.sql  order_items.yml  orders.sql  orders.yml  products.sql  supplies.sql
dbt/jaffle_shop/models/marts/: dim__customer.sql
dbt/jaffle_shop/models/sources/: sources.yml
dbt/jaffle_shop/models/staging/: stg__customer.sql  stg_customers.sql  stg_locations.sql  stg_locations.yml  stg_order_items.sql  (+3 more)
dbt/jaffle_shop/seeds/: currencies.csv
dbt/jaffle_shop/snapshots/: snapshot_customer.sql
dbt/product/: README.md  dbt_project.yml
dbt/product/exercises/: exercise_1.md  exercise_2.md  exercise_3.md
dbt/transaction/: README.md  dbt_project.yml  packages.yml
dbt/transaction/exercises/: exercise_1.md  exercise_2.md  exercise_3.md
dbt/transaction/macros/: db_ds_tbl_id_generator.yml  incremental_filter.sql  transactions_fields.sql
scripts/: README.md  create_tables.py  generate_data.py
scripts/data_generation/: run_bigquery_simulation.py  simulation_bigquery.py
scripts/tables/: create_tables.py  schemas.py
(+9 files in other folders)
