[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "\"The best way to learn dbt and why not Airflow as well\""
authors = [ "\"Andrea Bombino\""]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.9.17,<3.13"
dbt-core = "1.9.3"
dbt-bigquery= "1.9.1"
google-cloud-storage="2.19.0"
google-cloud-bigquery="3.30.0"
google-api-python-client="2.164.0"
google-auth="2.38.0"
google-cloud-core = "2.4.3"
sqlfluff-templater-dbt="3.3.1"
google-crc32c = "1.6.0"
diff-cover="9.2.4"
elementary-data="0.17.0"
dbt-metricflow="0.8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
